k8s/prowlarr/app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-ingressroute
  namespace: prowlarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.home.coredev.uk`) && (PathPrefix(`/api`) || Path(`/ping`) || Path(`/health`))
      kind: Rule
      services:
        - name: prowlarr
          port: 9696
    - match: Host(`prowlarr.home.coredev.uk`)
      kind: Rule
      middlewares:
        - name: tinyauth-forwardauth
          namespace: tinyauth
      services:
        - name: prowlarr
          port: 9696
  tls:
    secretName: prowlarr-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-redirect
  namespace: prowlarr
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prowlarr.home.coredev.uk`)
      kind: Rule
      middlewares:
        - name: https-redirect
      services:
        - name: prowlarr
          port: 9696
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: prowlarr
spec:
  redirectScheme:
    scheme: https
    permanent: true
